Fix logo and book title being cut off on iOS

--- a/src/css/viewer.css
+++ b/src/css/viewer.css
@@ -248,6 +248,10 @@ direction: rtl;
     background-color: #4d4d4d;
 }
 
+#aboutButt1 {
+  width: auto;
+}
+
 .navbar
 {
   background: #4d4d4d;
@@ -269,6 +273,8 @@ direction: rtl;
 
 .navbar-left {
   width: 50%;
+  overflow: hidden;
+  height: 35px;
 }
 
 .book-title-header{
